<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global labels -->
    <string name="app_name">Софбус 24</string>
    <string name="app_img_empty_content_description" />
    <string name="app_button_ok">OK</string>
    <string name="app_button_cancel">Отказ</string>
    <string name="app_button_yes">Да</string>
    <string name="app_button_no">Не</string>
    <string name="app_dialog_title_info">Информация</string>
    <string name="app_dialog_title_important">Важно</string>
    <string name="app_dialog_title_error">Грешка</string>
    <string name="app_internet_error">Възникна грешка при извличането на информация. Моля проверете вашата интернет връзка и опитайте отново.</string>
    <string name="app_location_error">Моля включете поне едно от устройствата (GPS или WiFi), за да бъде засечено текущото ви местоположение.</string>
    <string name="app_remaining_minutes">м</string>
    <string name="app_remaining_hours">ч</string>

    <!-- Action Bar -->
    <!-- Sofbus24 -->
    <string name="action_closest_stations">Най-близки спирки</string>
    <string name="action_closest_stations_map">Карта</string>
    <string name="action_closest_stations_list">Списък</string>
    <string name="action_more">Повече</string>
    <string name="action_settints">Настройки</string>
    <string name="action_about">Информация</string>
    <!-- Metro Schedule -->
    <string name="action_ms_reset">Нулиране</string>
    <string name="action_ms_refresh">Обнови</string>
    <string name="action_ms_map">Карта</string>
    <!-- Station Map -->
    <string name="action_sm_focus">Карта</string>
    <string name="action_sm_map_mode">Режим на картата</string>
    <string name="action_sm_map_mode_normal">Нормален</string>
    <string name="action_sm_map_mode_terrain">Терен</string>
    <string name="action_sm_map_mode_satellite">Сателит</string>
    <string name="action_sm_map_mode_hybrid">Хибрид</string>
    <!-- About -->
    <string name="action_about_update_db">Обновяване на спирките</string>
    <string name="action_about_update_app">Проверка за нова версия</string>
    <!-- Preferences -->
    <string name="action_pref_reset">Нулиране</string>
    <string name="action_pref_info_details">Информация</string>

    <!-- Favourites Fragment -->
    <string name="fav_search_hint">Търсене по име или номер</string>
    <string name="fav_item_station_number_text" formatted="false">Спирка номер: %s</string>
    <string name="fav_item_rename_title">Преименувай</string>
    <string name="fav_item_rename_msg" formatted="false"><![CDATA[Промени името на спирка <b><i>%s (%s)</i></b> на:]]></string>
    <string name="fav_item_rename_hint">Въведи ново име</string>
    <string name="fav_item_rename_toast" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше преименувана на <b><i>%s (%s)</b></i>.]]></string>
    <string name="fav_item_remove_toast" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше успешно премахната от <b>Любими</b>.]]></string>
    <string name="fav_item_empty_list" formatted="false"><![CDATA[Няма намерени спирки в секцията <b>Любими</b>. За да добавите спирката, която търсите, намерете я в някой от останалите табове и маркирайте звездата пред нея.]]></string>
    <string name="fav_menu_remove_all">Изтрий всички</string>
    <string name="fav_menu_remove_all_confirmation" formatted="false"><![CDATA[Сигурни ли сте, че искате да премахнете всички спирки от <b>Любими?</b>]]></string>
    <string name="fav_menu_remove_all_toast" formatted="false"><![CDATA[Всички спирки бяха премахнати от секцията <b>Любими.</b>]]></string>
    <string name="fav_menu_remove_all_empty_toast" formatted="false"><![CDATA[Няма добавени спирки в секцията <b>Любими.</b>]]></string>

    <!-- Virtual Boards Fragment -->
    <string name="vb_search_hint">Търсене по име или номер</string>
    <string name="vb_item_station_number_text" formatted="false">Спирка номер: %s</string>
    <string name="vb_item_add_toast" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше успешно добавена в <b>Любими</b>.]]></string>
    <string name="vb_item_remove_toast" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше успешно премахната от <b>Любими</b>.]]></string>
    <string name="vb_item_search_list" formatted="false"><![CDATA[Моля въведете вашите критерии за търсене (осъществява се на базата на <b>номера</b> или <b>името</b> на спирката). Ако търсите по име е нужно да въведете <b>поне 3 символа</b>.]]></string>
    <string name="vb_item_empty_list" formatted="false"><![CDATA[Няма намерени спирки за <b>%s</b>. Моля опитайте с други критерии за търсене.]]></string>

    <!-- Schedule Fragment -->
    <string name="sch_search_hint">Търсене по номер или посока</string>
    <string name="sch_search_tab_bus">Автобуси</string>
    <string name="sch_search_tab_trolley">Тролеи</string>
    <string name="sch_search_tab_tram">Трамваи</string>
    <string name="sch_item_bus" formatted="false">Автобус №%s</string>
    <string name="sch_item_trolley" formatted="false">Тролей №%s</string>
    <string name="sch_item_tram" formatted="false">Трамвай №%s</string>
    <string name="sch_item_empty_list" formatted="false"><![CDATA[Няма намерени резултати за <b>%s</b> в секция <b>%s</b>. Моля опитайте с други критерии за търсене.]]></string>

    <!-- Metro Fragment -->
    <string name="metro_search_hint">Търсене по име или номер</string>
    <string name="metro_search_tab_direction1">Линия 1</string>
    <string name="metro_search_tab_direction2">Линия 2</string>
    <string name="metro_item_favourite" />
    <string name="metro_item_station_number_text" formatted="false">Спирка номер: %s</string>
    <string name="metro_item_station_number_text_sign" formatted="false">Спирка №%s</string>
    <string name="metro_item_add_toast" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше успешно добавена в <b>Любими</b>.]]></string>
    <string name="metro_item_remove_toast" formatted="false"><![CDATA[Спирката <b><i>%s (%s)</b></i> беше успешно премахната от <b>Любими</b>.]]></string>
    <string name="metro_item_empty_list" formatted="false"><![CDATA[Няма намерени метростанции за <b>%s</b> в посока <b>%s</b>. Моля опитайте с други критерии за търсене.]]></string>
    <string name="metro_menu_map_route">Маршрут</string>
    <string name="metro_loading_schedule" formatted="false"><![CDATA[Извличане на разписанието за спирка <b><i>%s (%s)</b></i>...]]></string>
    <string name="metro_schedule_refresh" formatted="false"><![CDATA[Обновяване на оставащото време...]]></string>

    <!-- About -->
    <string name="about_title" formatted="false"><![CDATA[%s - версия %s]]></string>
    <string name="about_information" formatted="false">
<![CDATA[<b>%s версия %s<br>© 2012 by Zdravko Nestorov. All rights reserved</b><br><br>Android системата предоставя подробна информация, 
		свързана с използването на градския транпорт в София, като часове на пристигане в реално време, разписания на превозните средства, 
		разположения на спирките на територията на София, както и локализиране на най-близките спирки, в зависимост от текущото местоположение.<br><br>
		<i>Данните се извличат от: <b><u><a href="http://m.sumc.bg">http://m.sumc.bg</a></u></b></i>]]>
    </string>
    <string name="about_update_app" formatted="false"><![CDATA[Проверка за нова версия на приложението...]]></string>
    <string name="about_update_app_last" formatted="false"><![CDATA[В момента използвате последната версия на приложението - <b>Софбус 24 - версия %s</b>. Моля опитайте по-късно.]]></string>
    <string name="about_update_app_new" formatted="false"><![CDATA[Налична е нова версия - <b>Софбус 24 - версия %s</b>. Бихте ли желали да обновите приложението?]]></string>
    <string name="about_update_db" formatted="false"><![CDATA[Проверка за обновление на спирките...]]></string>
    <string name="about_update_db_last">В момента няма налично обновление на спирките. Моля опитайте по-късно.</string>
    <string name="about_update_db_new">Налично е обновление на спирките. Бихте ли желали да добавите новите спирки?</string>
    <string name="about_update_db_copy" formatted="false"><![CDATA[Обновяване на спирките на градския транспорт...]]></string>
    <string name="about_update_db_restart" formatted="false"><![CDATA[Новите спирки бяха добавени успешно. Ще трябва да рестартирате приложението, за да използвате обновената информация. Искате ли да рестартирате <b>Софбус 24</b> сега?]]></string>

    <!-- Preferences -->
    <string name="pref_reset">Сигурни ли сте, че искате да нулирате всички настройки и да ги върнете в началното им положение.</string>
    <string name="pref_title">Настройки</string>
    <string name="pref_restart_app" formatted="false"><![CDATA[Ще трябва да рестартирате приложението, за да има резултат от направените промени. Искате ли да рестартирате <b>Софбус 24</b> сега?]]></string>
    <string name="pref_category_common">ОБЩИ</string>
    <string name="pref_category_common_language_title">Език</string>
    <string name="pref_category_common_language_summary">Избор на език</string>
    <string name="pref_category_visual">ВИЗУАЛНИ</string>
    <string name="pref_category_visual_fav_title">Фаворити</string>
    <string name="pref_category_visual_fav_summary">Визуализиране на фаворитите с показана картинка от GoogleMaps StreetView</string>
    <string name="pref_category_stations">ИНФОРМАЦИЯ ЗА СПИРКИ</string>
    <string name="pref_category_stations_title">Времена на градския транспорт</string>
    <string name="pref_category_stations_summary">Оставащо време или времена на пристигане</string>
    <string name="pref_category_stations_closest_title">Брой най-близки спирки</string>
    <string name="pref_category_stations_closest_summary">Колко спирки да се визуализират около текущото местоположение или избрана точка</string>
    <string name="pref_category_stations_timeInfoRetrieval_title">Извлечена информация</string>
    <string name="pref_category_stations_timeInfoRetrieval_summary">Определяне на кое време да се използва за показване/пресмятане на извлечената информация</string>

    <!-- Closest Stations List -->
    <string name="cs_list_title">Най-близки спирки</string>
    <string name="cs_list_search_hint">Търсене по име или номер</string>
    <string name="cs_list_item_station_number_text" formatted="false">Спирка номер: %s</string>
    <string name="cs_list_loading_current_location" formatted="false"><![CDATA[Изчисляване на текущите координати...]]></string>
    <string name="cs_list_item_empty_list" formatted="false"><![CDATA[Няма намерени спирки за <b>%s</b>. Моля опитайте с други критерии за търсене.]]></string>

</resources>