<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/schedule_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:background="#808080"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/schedule_bus_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/inner_tab_border"
            android:gravity="center"
            android:padding="9sp"
            android:text="@string/sch_search_tab_bus"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inner_tab_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/schedule_trolley_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-1sp"
            android:layout_marginRight="-1sp"
            android:layout_weight="1"
            android:background="@drawable/inner_tab_border"
            android:gravity="center"
            android:padding="9sp"
            android:text="@string/sch_search_tab_trolley"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inner_tab_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/schedule_tram_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/inner_tab_border"
            android:gravity="center"
            android:padding="9sp"
            android:text="@string/sch_search_tab_tram"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inner_tab_grey"
            android:textSize="14sp" />
    </LinearLayout>

    <bg.znestorov.sofbus24.utils.activity.SearchEditText
        android:id="@+id/schedule_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:drawablePadding="5sp"
        android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
        android:hint="@string/sch_search_hint" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1sp"
        android:fastScrollEnabled="true"
        android:focusable="true" >
    </ListView>

    <RelativeLayout
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="-25sp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/schedule_list_empty_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_img_empty_content_description"
            android:paddingBottom="20sp"
            android:src="@drawable/ic_empty_schedule_list" />

        <TextView
            android:id="@+id/schedule_list_empty_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/schedule_list_empty_image"
            android:gravity="center"
            android:textColor="#080808"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>