<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/metro_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:background="#808080"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/metro_direction1_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/inner_tab_border"
            android:gravity="center"
            android:padding="9sp"
            android:text="@string/metro_search_tab_direction1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inner_tab_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/metro_direction2_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-1sp"
            android:layout_weight="1"
            android:background="@drawable/inner_tab_border"
            android:gravity="center"
            android:padding="9sp"
            android:text="@string/metro_search_tab_direction2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inner_tab_grey"
            android:textSize="14sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/metro_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/metro_search_hint" >
    </EditText>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1sp"
        android:fastScrollEnabled="true"
        android:focusable="true" >
    </ListView>

    <RelativeLayout
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:paddingBottom="30sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingTop="50sp" >

        <ImageView
            android:id="@+id/metro_list_empty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/metro_list_empty_text"
            android:layout_alignRight="@+id/metro_list_empty_text"
            android:contentDescription="@string/app_img_empty_content_description"
            android:paddingBottom="20sp"
            android:src="@drawable/ic_empty_metro_list" />

        <TextView
            android:id="@+id/metro_list_empty_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/metro_list_empty_image"
            android:gravity="center_horizontal"
            android:textColor="#080808"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>