<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favourites_item_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="185sp" >

    <ProgressBar
        android:id="@+id/favourites_item_progress_bar"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/favourites_item_bg_image"
        style="?android:attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_img_empty_content_description"
        android:cropToPadding="true"
        android:padding="10sp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/favourites_item_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10sp"
        android:background="#60000000" >

        <ImageButton
            android:id="@+id/favourites_item_expand"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/fav_item_rename_toast"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:src="@drawable/ic_collapse" />

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_weight="1"
            android:padding="1dip" >

            <TextView
                android:id="@+id/favourites_item_station_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:padding="1dip"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favourites_item_station_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/favourites_item_station_name"
                android:layout_below="@+id/favourites_item_station_name"
                android:padding="1dip"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/favourites_item_rename"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/fav_item_rename_toast"
            android:paddingLeft="6dip"
            android:paddingRight="3dip"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/favourites_item_remove"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/fav_item_remove_toast"
            android:paddingLeft="3dip"
            android:paddingRight="6dip"
            android:src="@android:drawable/ic_menu_delete" />
    </LinearLayout>

</FrameLayout>